<resources>
    <string name="app_name">Jam Tracker</string>
    <string name="button_test">Test</string>
    <string name="placeholder">Platzhalter</string>
    <string name="cam_ka_nord">Karlsruhe Nord</string>
    <string name="cam_ka_mitte">Karlsruhe Mitte</string>
    <string name="cam_ka_dreieck">Dreieck Karlsruhe</string>
    <string name="cam_ettlingen">Ettlingen</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
