<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tracker.jam.app.dhbw.com.jamtrackerapp.MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:onClick="testButton"
        android:text="@string/button_test"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/cam_ka_nord"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:text="@string/placeholder"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/cam_ka_mitte"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/placeholder"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/cam_ka_dreieck"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/placeholder"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/cam_ettlingen"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/placeholder"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView32" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
